--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,12 @@
 name = "RustByExample"
 version = "0.1.0"
 edition = "2021"
+authors = ["hoel"]
 
+# build = "build.rs" todo: build scripts, 12.4
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# todo: rary failed!
+#rary = {path = "./src/rary.rs"}
+clap = "3.1.6"
